objects/BP_Language__c.object
<CustomObject><fields>
        <fullName>LanguageCode__c</fullName>
        <label>Language Code</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>UofNRSLanguageID__c</fullName>
        <externalId>true</externalId>
        <label>UofN RS Language ID</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>WebAppLanguage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web App Language</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>XrefId__c</fullName>
        <externalId>true</externalId>
        <label>XrefId</label>
        <length>30</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Language</label><nameField>
        <label>Language Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Languages</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LanguageCode__c</columns>
        <columns>WebAppLanguage__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>